<resources>
    <string name="app_name">Upasana Mandir</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="callAshok">callA</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="display_name">Display Name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="choose_file">Choose File</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="upload">Upload</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_password">Admin Password</string>
    <string name="enter_name_of_video">Enter name of video</string>
    <string name="show_videos">Show Videos</string>
    <string name="bank_details">BANK DETAILS:</string>
    <string name="name_jain_upasana_trust">Name: Jain Upasana Trust</string>
    <string name="bank_branch_indian_bank_bhayandar_w">Bank/Branch: Indian Bank,Bhayandar(W).</string>
    <string name="bank_ac_no_6188318695">Bank Ac-No: 6188318695</string>
    <string name="ifsc_code_idib000b079">IFSC Code: IDIB000B079</string>
    <string name="pan_no_aabtj8834c">Pan No: AABTJ8834C</string>
    <string name="address">ADDRESS:</string>
    <string name="arihant_bungalow_upasana_mandir_90_feet_road_near_simandhara_jain_mandir_bhayandar_w">Arihant Bungalow/Upasana Mandir,90 Feet Road,Near Simandhara Jain Mandir,Bhayandar(W)</string>
    <string name="for_admins">For Admins</string>
    <string name="welcome">Welcome</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="course">Course</string>
    <string name="activities">Activities</string>
    <string name="videos">Videos</string>
    <string name="chat_box">Chat Box</string>
    <string name="donate_us">Donate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="locate_us">Locate Us</string>
    <string name="current">com.google.android.gms.internal.ls@e577378</string>
    <string name="create_new_account">Create new Account</string>
    <string name="log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here!!</string>
    <string name="change_image">Change Image</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile">Profile</string>

</resources>
