<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="patwa.aman.com.upasanamandir.FinalGalleryUpload">

    <Button
        android:id="@+id/btn_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_file"/>

    <EditText
        android:id="@+id/edt_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/btn_choose_image"
        android:layout_marginStart="16dp"
        android:hint="@string/enter_file_name" />

    <ImageView
        android:id="@+id/image_view_upload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_choose_image"
        android:layout_marginTop="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_upload"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/edt_file_name"
        android:layout_marginBottom="7dp"
        android:text="@string/upload"
        android:id="@+id/btn_upload" />

    <TextView
        android:id="@+id/txt_show_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_upload"
        android:layout_alignTop="@+id/btn_upload"
        android:layout_marginStart="27dp"
        android:layout_toEndOf="@+id/btn_upload"
        android:gravity="center"
        android:text="@string/show_uploads"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

</RelativeLayout>
